[package]
name = "polkadot-ffi-subxt"
version = "0.1.0"
edition = "2021"

[lib]
name = "polkadot_ffi"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { version = "6.0", default-features = false }
subxt = { version = "0.35", default-features = false, features = ["jsonrpsee-client"] }
subxt-signer = { version = "0.5", default-features = false }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4"