[package]
name = "polkadot-ffi-subxt"
version = "0.1.0"
edition = "2021"

[lib]
name = "polkadot_ffi"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { version = "38.0", default-features = false, features = ["serde", "full_crypto"] }
subxt = { version = "0.44" }
subxt-core = { version = "0.44" }
subxt-signer = { version = "0.44", default-features = false, features = ["sr25519", "subxt"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4"