[package]
name = "polkadot-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "polkadot_ffi"
crate-type = ["cdylib"]

[dependencies]
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
schnorrkel = "0.11.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = "34.0.0"
